adjust table and breadcrumb-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/wms/addstock.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstock.xhtml
@@ -64,6 +64,10 @@
 
 
         <ui:define name="right">
+             <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Add Stock" url="addstock.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header="Add Stock">
                     <p:ajaxStatus style="width:16px;height:16px;">
