--- a/MerlionPortal/MerlionPortal-war/web/wms/addstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstoragebin.xhtml
@@ -63,6 +63,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header="Add Storage Bin">
                     <p:ajaxStatus style="width:16px;height:16px;">
