--- a/MerlionPortal/MerlionPortal-war/web/wms/addwarehousezone.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addwarehousezone.xhtml
@@ -63,6 +63,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Add Warehouse Zone" url="addwarehousezone.xhtml" />
+            </p:breadCrumb>
             <h:form>
                 <p:panel id="panel" header="Add Warehouse Zone">
                     <!--                    Storage Type is renamed to Warehouse Zone to make it clearer-->
