--- a/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
@@ -64,6 +64,10 @@
         </ui:define>
 
         <ui:define name="right">
+            <p:breadCrumb>
+                <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+            </p:breadCrumb>
             <h:form id="formMain">
                 <p:panel id="panel" header="Add New Warehouse">
                     <p:ajaxStatus style="width:16px;height:16px;">
