menu alignment-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
@@ -29,7 +29,7 @@
         </ui:define>
 
         <ui:define name="left">
-            <p:menu>
+            <p:menu styleClass="menu-width">
                 <p:submenu label="MRP HOME" styleClass="display:block">
                     <p:menuitem value="MRP II Home" url="mrp.xhtml" style="background-color: lavender"/>
                 </p:submenu>
