--- a/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
@@ -23,7 +23,7 @@
 
         <ui:define name="left">
             <h:form id="formMain">
-                <p:menu>
+                <p:menu styleClass="menu-width">
                     <p:submenu label="MRP HOME" styleClass="display:block">
                         <p:menuitem value="MRP II Home" url="mrp.xhtml" style="background-color: lavender"/>
                     </p:submenu>
