--- a/MerlionPortal/MerlionPortal-war/web/admin/createrole.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createrole.xhtml
@@ -6,13 +6,12 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-
     <c:set var="root" value="${request.contextPath}" />
     <ui:composition template="${root}/templates/templateadmin.xhtml">
         <ui:param name="pageName" value="Create Role" />
         <!-- Override Content -->
         <ui:define name="content">
-            <script type="text/javascript" src="${root}/js/manageroles.js"></script>
+            <script type="text/javascript" src="${request.contextPath}/js/manageroles.js"></script>
             <h:form id="form" >
                 <div class="container">
                     <h2>Create Role</h2>
