--- a/MerlionPortal/MerlionPortal-war/web/wms/viewwarehousezone.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewwarehousezone.xhtml
@@ -91,7 +91,7 @@
                         </p:row>
                     </p:panelGrid>
 
-                    <p:dataTable id="warehousezoneData" var="warehousezone"  scrollable="true" scrollWidth="150%" scrollHeight="300" sortMode="multiple" editable="true" value="#{warehouseZoneViewEditManagedBean.warehouseZones}" 
+                    <p:dataTable id="warehousezoneData" var="warehousezone"  scrollable="true" scrollWidth="1500" sortMode="multiple" editable="true" value="#{warehouseZoneViewEditManagedBean.warehouseZones}" 
                                  widgetVar="warehouseZoneTable"
                                  emptyMessage="No Warehouse Zone found"
                                  resizableColumns="true"
@@ -118,18 +118,18 @@
                         <p:column  filterBy="#{warehousezone.name}" filterMatchMode="contains" headerText="Warehouse Zone">
                             <p:cellEditor>
                                 <f:facet name="output"><h:outputText value="#{warehousezone.name}" /></f:facet>
-                                <f:facet name="input"><p:inputText value="#{warehousezone.name}" style="width:100%" label="Warehouse Zone"/></f:facet>
+                                <f:facet name="input"><p:inputText value="#{warehousezone.name}"  label="Warehouse Zone"/></f:facet>
                             </p:cellEditor>
                         </p:column>     
 
                         <p:column  headerText="Description" filterBy="#{warehousezone.description}" filterMatchMode="contains">
                             <p:cellEditor>
                                 <f:facet name="output"><h:outputText value="#{warehousezone.description}" /></f:facet>
-                                <f:facet name="input"><p:inputText value="#{warehousezone.description}" style="width:100%" label="Description"/></f:facet>
+                                <f:facet name="input"><p:inputText value="#{warehousezone.description}" label="Description"/></f:facet>
                             </p:cellEditor>
                         </p:column>
 
-                        <p:column style="width:48px">
+                        <p:column >
                             <p:commandButton action="#{warehouseZoneViewEditManagedBean.deleteWarehouseZone(warehousezone)}" update="warehousezoneData" icon = "ui-icon-trash">
                                 <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this Warehouse Zone?" icon="ui-icon-alert" />
                             </p:commandButton> 
@@ -139,7 +139,7 @@
                             </p:confirmDialog>
                         </p:column>
 
-                        <p:column style="width:42px">
+                        <p:column >
                             <p:rowEditor />
                         </p:column>
 
