--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
@@ -11,11 +11,12 @@
     <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
         <c:set var="import" value="templateadmin.xhtml"/>
     </c:if>
-    <ui:composition template="${root}/templates/${import}">        <ui:param name="pageName" value="WMS home" />
+    <ui:composition template="${root}/templates/${import}">        
+        <ui:param name="pageName" value="WMS home" />
 
         <ui:define name="more-imports">
             <ui:insert>
-                               <link rel="stylesheet" href="${request.contextPath}/css/mrp.css" type="text/css" />
+                <link rel="stylesheet" href="${request.contextPath}/css/mrp.css" type="text/css" />
             </ui:insert>
         </ui:define>
 
@@ -100,7 +101,7 @@
                     </h:panelGrid>
                 </h:form>
                 <h:form id="datafield" >
-                    <p:dataTable id="stockData" var="stock"  scrollable="true" scrollWidth="150%" scrollHeight="300" sortMode="multiple" editable="true" value="#{stockViewEditManagedBean.stocks}" 
+                    <p:dataTable id="stockData" var="stock"  scrollable="true" scrollWidth="1500"  sortMode="multiple" editable="true" value="#{stockViewEditManagedBean.stocks}" 
                                  widgetVar="stockTable"
                                  emptyMessage="No such stock found"
                                  resizableColumns="true"
@@ -165,7 +166,7 @@
                             </p:cellEditor>
                         </p:column>
 
-                        <p:column style="width:48px">
+                        <p:column >
                             <p:commandButton actionListener="#{stockViewEditManagedBean.deleteStock(stock)}" ajax="true" update=":datafield:totalQuantity :datafield:stockData" icon="ui-icon-trash"  >
                                 <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this stock?" icon="ui-icon-alert" />
                             </p:commandButton> 
@@ -175,7 +176,7 @@
                             </p:confirmDialog>
                         </p:column> 
                         <!--                        <p:remoteCommand name="updateQuantity" update="totalQuantity" />-->
-                        <p:column style="width:42px">
+                        <p:column >
                             <p:rowEditor />
                         </p:column>
                     </p:dataTable>
