--- a/MerlionPortal/MerlionPortal-war/web/wms/addwarehousezone.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addwarehousezone.xhtml
@@ -20,46 +20,52 @@
         </ui:define>
 
         <ui:define name="left">
-             <p:menu styleClass="menu-width">
-                    <p:submenu label =" WMS HOME" styleClass="display:block">
-                        <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
-                    </p:submenu>
-                    <p:submenu label =" Warehouse" styleClass="display:block">
-                        <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
-                        <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Warehouse Zone" styleClass="display:block" >
-                        <p:menuitem value="Add Warehouse Zone" url="addwarehousezone.xhtml" />
-                        <p:menuitem value="View Warehouse Zones" url="viewwarehousezone.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Storage Bin" styleClass="display:block" >
-                        <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
-                        <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Stock" styleClass="display:block" >
-                        <p:menuitem value="Add Stock" url="addstock.xhtml"/>
-                        <p:menuitem value="View Stock" url="viewstock.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label="Stock Audit" styleClass="display:block" >
-                        <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml"/>
-                        <p:menuitem value="View All Stock Audits" url="viewallstockaudit.xhtml"/>
-                        <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label="Stock Transport Order" styleClass="display:block" >
-                        <p:menuitem value="Create Transport Order" url="createtransportorder.xhtml"/>
-                        <p:menuitem value="View Transport Order To Be Procssed" url="viewsourcetransportorder.xhtml"/>
-                        <p:menuitem value="All IncomingTransport Orders" url="viewdesttransportorder.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label="Warehouse Space Request Orders" styleClass="display:block" >
-                        <p:menuitem value="All Pending Request" url="viewallpendingrequests.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label="Warehouse Service Fulfillment Check" >
-                        <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="View Notification" >
-                        <p:menuitem value="View Notification" url="viewallnotification.xhtml" />
-                    </p:submenu>
-                </p:menu>
+            <p:menu styleClass="menu-width">
+                <p:submenu label =" WMS HOME" styleClass="display:block">
+                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
+                </p:submenu>
+                <p:submenu label =" Warehouse" styleClass="display:block">
+                    <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+                    <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+                </p:submenu>
+                <p:submenu label="Warehouse Zone" styleClass="display:block" >
+                    <p:menuitem value="Add Warehouse Zone" url="addwarehousezone.xhtml" />
+                    <p:menuitem value="View Warehouse Zones" url="viewwarehousezone.xhtml" />
+                </p:submenu>
+                <p:submenu label="Storage Bin" styleClass="display:block" >
+                    <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                    <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                </p:submenu>
+                <p:submenu label="Stock" styleClass="display:block" >
+                    <p:menuitem value="Add Stock" url="addstock.xhtml"/>
+                    <p:menuitem value="View Stock" url="viewstock.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Stock Audit" styleClass="display:block" >
+                    <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml"/>
+                    <p:menuitem value="View All Stock Audits" url="viewallstockaudit.xhtml"/>
+                    <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Stock Transport Order" styleClass="display:block" >
+                    <p:menuitem value="Create Transport Order" url="createtransportorder.xhtml"/>
+                    <p:menuitem value="View Transport Order To Be Procssed" url="viewsourcetransportorder.xhtml"/>
+                    <p:menuitem value="All IncomingTransport Orders" url="viewdesttransportorder.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Internal Warehouse Request Orders" styleClass="display:block" >
+                    <p:menuitem value="Create Internal Warehouse Request" url="createinternalwo.xhtml"/>
+                    <p:menuitem value="View Incoming Internal Orders" url="viewincomingorders.xhtml"/>
+                    <p:menuitem value="View Outgoing Internal Orders" url="viewoutgoingorders.xhtml"/>
+                </p:submenu>
+                <p:submenu label="External Warehouse Request Orders" styleClass="display:block" >
+                    <p:menuitem value="Create External Warehouse Request" url="createwarehouserequest.xhtml"/>
+                    <p:menuitem value="View All External Orders" url="viewallpendingrequests.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Warehouse Space Fulfillment Check" >
+                    <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
+                </p:submenu>
+                <p:submenu label="View Notification" >
+                    <p:menuitem value="View Notification" url="viewallnotification.xhtml" />
+                </p:submenu>
+            </p:menu>
         </ui:define>
 
         <ui:define name="right">
