--- a/MerlionPortal/MerlionPortal-war/web/wms/warehouseservicefulfillmentcheck.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/warehouseservicefulfillmentcheck.xhtml
@@ -25,7 +25,7 @@
         <ui:define name="left">
             <p:menu styleClass="menu-width">
                 <p:submenu label =" WMS HOME" styleClass="display:block">
-                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
+                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
                 </p:submenu>
                 <p:submenu label =" Warehouse" styleClass="display:block">
                     <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
@@ -53,10 +53,16 @@
                     <p:menuitem value="View Transport Order To Be Procssed" url="viewsourcetransportorder.xhtml"/>
                     <p:menuitem value="All IncomingTransport Orders" url="viewdesttransportorder.xhtml"/>
                 </p:submenu>
-                <p:submenu label="Warehouse Space Request Orders" styleClass="display:block" >
-                    <p:menuitem value="All Pending Request" url="viewallpendingrequests.xhtml"/>
+                <p:submenu label="Internal Warehouse Request Orders" styleClass="display:block" >
+                    <p:menuitem value="Create Internal Warehouse Request" url="createinternalwo.xhtml"/>
+                    <p:menuitem value="View Incoming Internal Orders" url="viewincomingorders.xhtml"/>
+                    <p:menuitem value="View Outgoing Internal Orders" url="viewoutgoingorders.xhtml"/>
                 </p:submenu>
-                <p:submenu label="Warehouse Service Fulfillment Check" >
+                <p:submenu label="External Warehouse Request Orders" styleClass="display:block" >
+                    <p:menuitem value="Create External Warehouse Request" url="createwarehouserequest.xhtml"/>
+                    <p:menuitem value="View All External Orders" url="viewallpendingrequests.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Warehouse Space Fulfillment Check" >
                     <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
                 </p:submenu>
                 <p:submenu label="View Notification" >
